--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   firebase_auth: ^4.2.5
   firebase_database: ^10.0.13
   firebase_phone_auth_handler: ^1.0.8
+  cloud_firestore: ^4.3.1
   fluttertoast: ^8.1.3
   # other
   google_nav_bar: ^5.0.6
@@ -26,7 +27,10 @@ dependencies:
   cached_network_image: ^3.2.3
   shimmer: ^2.0.0
   pinput: ^2.2.12
-  cloud_firestore: ^4.3.1
+  provider: ^6.0.5
+  shared_preferences: ^2.0.18
+  platform_device_id: ^1.0.1
+
 
 dev_dependencies:
   flutter_test:
