--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   firebase_phone_auth_handler: ^1.0.8
   cloud_firestore: ^4.3.1
   fluttertoast: ^8.1.3
+  firebase_app_check: ^0.1.1+13
   # other
   google_nav_bar: ^5.0.6
   card_swiper: ^2.0.4
@@ -30,6 +31,12 @@ dependencies:
   provider: ^6.0.5
   shared_preferences: ^2.0.18
   platform_device_id: ^1.0.1
+  loading_indicator: ^3.1.0
+  page_transition: ^2.0.9
+  firebase_ui_firestore: ^1.2.9
+
+
+
 
 
 dev_dependencies:
